# baseline-simcon

./: .gitattributes  .gitignore  pyproject.toml
.github/: copilot-instructions.md
CODI/: TRAJECTORY_CONSISTENCY_README.md  test.py  test_trajectory_consistency.py  train.py
CODI/.github/: copilot-instructions.md
CODI/scripts/: euclidean-train_llama1b_gsm8k-aug-decoder-trajectory.sh  test_llama1b-copy.sh  train_llama1b_gsm8k-aug-decoder-trajectory-euclidean.sh  train_llama1b_gsm8k-aug-decoder-trajectory-hyperbolic.sh  train_llama1b_gsm8k-aug-decoder.sh
CODI/src/: model.py  trajectory_consistency.py
