[project]
name = "baseline"
version = "0.1.0"
description = "SIM-CoT baseline implementation"
requires-python = ">=3.10,<3.13"
dependencies = [
    # 核心依赖（适度放宽但保持兼容区间）
    "torch>=2.5.1,<3.0.0",
    "transformers>=4.46.2,<5.0.0",
    "accelerate>=1.10.0,<2.0.0",
    "peft>=0.17.0,<1.0.0",
    "datasets>=3.1.0,<5.0.0",
    # 数值/数据处理
    "numpy>=1.24.0,<2.3.0",
    "pandas>=2.3.0,<3.0.0",
    "pyarrow>=14.0.0,<30.0.0",
    "tqdm>=4.67.0,<5.0.0",
    # HuggingFace 生态
    "huggingface-hub>=0.20.0,<1.0.0",
    "tokenizers>=0.20.0,<0.21.0",
    "safetensors>=0.4.0,<1.0.0",
    # 训练监控
    "tensorboard>=2.14.0,<2.21.0",
    "wandb>=0.15.0,<0.20.0",
    # 工具库
    "pyyaml>=6.0,<7.0",
    "protobuf>=3.20.0,<6.0.0",
    "psutil>=5.9.0,<7.1.0",
    "regex>=2024.0.0,<2026.0.0",
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# ModelScope 支持（可选）
modelscope = [
    "modelscope>=1.10.0",
]

# PyPI 镜像源配置（与 SIM-CoT 保持一致）
[[tool.uv.index]]
url = "http://harbor.internal.com:8081/repository/pypi-hkust/simple/"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"

[[tool.uv.index]]
url = "https://pypi.org/simple/"
